# MIRA_app

./: .editorconfig  .gitignore  CODE_REVIEW.md  IMPLEMENTED_IMPROVEMENTS.md  PRIORITY_IMPROVEMENTS.md  README.md  SMART_PROMPTING_NOTES.md  index.html  list.txt  package-lock.json  package.json  refactored_app_architecture_for_mira.md  tsconfig.json  tsconfig.test.json  vite.config.js  vitest.config.mjs  vitest.setup.ts
readme/: ARCHITECTURE_GAPS_REPORT.md  AUTOMATED_TESTING_SETUP.md  CHARACTER_TEMPLATE_SYSTEM_IMPLEMENTATION_PLAN.md  CODE_QUALITY_ANALYSIS.md  CODE_REVIEW.md  CUSTOM_DB_PATH_ALTERNATIVES.md  FIX_ROADMAP.md  PHASE_A_COMPLETION_REPORT.md  PHASE_B_PROGRESS_REPORT.md  PHASE_B_SMOKE_TEST_CHECKLIST.md  PHASE_C_PROGRESS_REPORT.md  PHASE_D_PROGRESS_REPORT.md  PHASE_E_PROGRESS_REPORT.md  PRIORITY_IMPROVEMENTS.md  REMEDIATION_COMPLETION_SUMMARY.md  SQLITE_SCHEMA_CHANGE_CHECKLIST.md  SQLITE_SCHEMA_OWNERSHIP.md  STORY_META_CONVERSION_CHECKLIST.md  STORY_TEMPLATE_OVERLAY_AUDIT_REPORT.md  SYSTEM_LIMITATIONS.md  WORK_PLAN_ARCHITECTURE_REMEDIATION.md  WORLD_TEMPLATE_SYSTEM_IMPLEMENTATION_PLAN.md  app_readme.md  architecture_readme.md  db_migration_guideline.md  refactored_app_architecture_for_mira.md
src/: App.jsx  App.tsx  main.jsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/migrations/: v1_create_tables.sql
tests/: ChatHeader.test.tsx  ChatView.test.tsx  CurrentContextPanel.test.tsx  EditorPanel.test.tsx  HeaderSettingsMenu.test.tsx  PendingUpdatesPanel.test.tsx  (+25 more)
(+159 files in other folders)
