[package]
name = "mira"
version = "0.1.0"
description = "M.I.R.A. - Modular Interactive Roleplaying Assistant"
authors = ["orielhazra"]
license = ""
repository = "https://github.com/orielhazra/MIRA_app"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
dirs = "6"
